--- a/codBase/css/estilos.css
+++ b/codBase/css/estilos.css
@@ -44,6 +44,12 @@ body{
   width: 22%;
   height: 62.91px;
 }
+
+/*Efecto clic boton */
+
+
+
+
 @font-face {
   font-family: digital;
   src: url("../fonts/digital.ttf");
